# httpdreportgenerator

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: codeql.yml
cmake/: ubuntu-defaults.cmake
include/: AppOptions.hpp  Extensions.hpp  LogSearcher.hpp
include/resources/: Resources.in.hpp
src/: main.cpp
